# rbx-products

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  products.example.toml  release.yml
.github/workflows/: release.yml
src/: main.rs  utils.rs
src/api/: middleware.rs  mod.rs  model.rs  products.rs
src/sync/: download.rs  mod.rs  products.rs  upload.rs
src/ui/: confirm.rs  diffs.rs
