[package]
name = "rbx_products"
version = "0.1.1"
edition = "2024"
authors = ["Jack Fox <jack@infernal.io>"]
description = "A CLI tool for managing Roblox gamepasses and dev-products."
license = "MIT"
repository = "https://github.com/outofbears/rbx-products"
readme = "README.md"
include = ["**/*.rs"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.147"
serde_derive = "1.0.228"
nestify = "0.3.3"
async-trait = "0.1.89"
http = "1"
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.5.53", features = ["derive"] }
lazy_static = "1.5.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = [
	"json",
	"multipart",
	"gzip",
	"deflate",
	"brotli",
] }
reqwest-middleware = { version = "0.4.2", features = ["json", "multipart"] }
reqwest-retry = "0.8.0"
dotenv = "0.15.0"
toml_edit = "0.24.0"
toml = "0.9.10"
dyn-fmt = "0.4.3"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
color-eyre = "0.6.5"
futures = "0.3"
regex = "1.12.3"
